tests/miniJava/neg/000757_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = false class java { public static void Main ( String [ ] java ) { { } } } ; } }
